--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   google_maps_flutter: ^2.7.0
   qr_flutter: ^4.0.0
+  flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
