--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,14 @@ dependencies:
   get: ^4.6.6
   sidebarx: ^0.17.1
   convex_bottom_bar: ^3.2.0
-  google_maps_flutter: ^2.7.0
+  google_maps_flutter: ^2.9.0
   qr_flutter: ^4.0.0
   flutter_staggered_grid_view: ^0.7.0
+  fl_chart: ^0.68.0
+  uuid: ^4.4.2
+  universal_html: ^2.0.8
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^10.2.0
 
 
 dev_dependencies:
