--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 
   http: ^1.2.2
   get: ^4.6.6
+  get_storage: ^2.1.1
   sidebarx: ^0.17.1
   convex_bottom_bar: ^3.2.0
   google_maps_flutter: ^2.9.0
@@ -44,8 +45,9 @@ dependencies:
   fl_chart: ^0.68.0
   uuid: ^4.4.2
   universal_html: ^2.0.8
-  image_gallery_saver: ^1.7.1
+  image_gallery_saver: ^2.0.3
   permission_handler: ^10.2.0
+  qr_code_scanner: ^1.0.1
 
 
 dev_dependencies:
