--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,19 @@ dependencies:
   permission_handler: ^10.2.0
   qr_code_scanner: ^1.0.1
   flutter_cache_manager: ^3.4.1
-
+  firebase_core: ^3.7.0
+  firebase_core_web: ^2.18.1
+  firebase_messaging: ^15.1.4
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  provider: ^6.1.2
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  change_app_package_name: ^1.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
