--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   provider: ^6.1.2
   flutter_local_notifications: ^18.0.1
+  easy_sidemenu: ^0.6.0
 
 dev_dependencies:
   flutter_test:
